--- a/site/index.html
+++ b/site/index.html
@@ -41,8 +41,8 @@
     
         <div class="image-container">
             <div class="website-title">
-                <img src="img/logo.png" alt="" class="logo">
-                <h2 class="title">Awesome <br> website</h2>
+                <img src="" alt="" class="logo">
+                <h2 class="title"></h2>
             </div>
         </div>
 
